@@ -1,3 +1,10 @@
+2002-04-29  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* writecode.c (lookup_inst): Ignore CLASS_IGNORE.
+        (info_args): Treat CLASS_IGNORE like CLASS_BIT.
+        Handle ARG_NIM4.
+        (info_len_in_words): Handle CLASS_IGNORE and ARG_NIM4.
+
 Tue May 23 21:39:23 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* configure: Regenerated to track ../common/aclocal.m4 changes.
